# standup

./: .env.example  .flake8  .gitignore  Dockerfile  docker-compose.yaml  main.py  makefile  pyproject.toml  requirements.txt
src/: alembic.ini  main.py
src/alembic_migrations/: env.py
src/alembic_migrations/versions/: 142b934193fb_.py  2022-04-24_23:22:18__38f06b1bc069_.py  2022-04-26_09:19:44__068dda1b193e_.py  4aaf859e32f5_.py  5ddc31aac57e_.py  6c51e23b2661_.py  6e42039613eb_.py  a29f93d45d6f_.py  b2a3de8d4344_.py  c2079c5e2d76_.py  c6becc86ead9_.py  c9e47f2847e2_.py  cd4b31d9ca2e_.py  f8786aec0eca_.py  facaf5633d53_.py  ff171bf9768b_.py
src/api/: routers.py  telegram.py
src/core/: config.py  database.py  logging.py  scheduler.py
src/crud/: base.py  feedbacks.py  films.py  users.py  warmups.py
src/db/: database.py
src/enums/: languages.py
src/films/: exceptions.py  utils.py
src/handlers/: __init__.py  message.py  users.py
src/handlers/callbacks/: __init__.py  query.py
src/handlers/commands/: __init__.py  films.py  groups.py  misc.py  users.py  warmups.py
src/handlers/service_handlers/: __init__.py  join.py  migrating.py
src/models/: __init__.py  base.py  feedbacks.py  films.py  users.py  warmups.py  welcome.py
src/schemas/: feedbacks.py  films.py  users.py  warmups.py
src/sdk/: dependencies.py  exceptions.py  middlewares.py  utils.py
src/services/: chats.py  warmups.py
src/telegram/: bot.py  dispatcher.py  messages.py  utils.py
src/telegram/inline_keyboard/: summoners.py
