[tool.poetry]
name = "standup"
version = "0.1.0"
description = ""
authors = ["tworedz"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
requests = "^2.26.0"
aiogram = "^2.14.3"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
httpx = "^0.21.1"
APScheduler = "^3.8.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
