[tool.poetry]
name = "standup"
version = "0.1.0"
description = ""
authors = ["tworedz"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
requests = "^2.26.0"
aiogram = "^2.14.3"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
httpx = "^0.21.1"
APScheduler = "^3.8.1"
alembic = "^1.7.5"
SQLAlchemy = "^1.4.31"
databases = "^0.5.5"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
structlog = "^21.5.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.11b1"
flake8 = "^4.0.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
py38 = true
include = '\.py$'


[tool.isort]
line_length = 100
default_section = "FIRSTPARTY"
force_single_line = "True"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
